--- a/app/index.pug
+++ b/app/index.pug
@@ -401,5 +401,30 @@ html(lang="ru")
                                         img(src=item.img, alt="")
                                     span=item.text 
         
-        
+        // Скрытый блок, для загрузки изображений в блок 360 градусов
+        .hidden-block(style="display: none")
+            img(src="img/rotate-1/2.png", alt="")
+            img(src="img/rotate-1/3.png", alt="")
+            img(src="img/rotate-1/4.png", alt="")
+            img(src="img/rotate-1/5.png", alt="")
+            img(src="img/rotate-1/6.png", alt="")
+            img(src="img/rotate-1/7.png", alt="")
+            img(src="img/rotate-1/8.png", alt="")
+            img(src="img/rotate-1/9.png", alt="")
+            img(src="img/rotate-1/10.png", alt="")
+            img(src="img/rotate-1/11.png", alt="")
+            img(src="img/rotate-1/12.png", alt="")
+
+            img(src="img/rotate-2/2.png", alt="")
+            img(src="img/rotate-2/3.png", alt="")
+            img(src="img/rotate-2/4.png", alt="")
+            img(src="img/rotate-2/5.png", alt="")
+            img(src="img/rotate-2/6.png", alt="")
+            img(src="img/rotate-2/7.png", alt="")
+            img(src="img/rotate-2/8.png", alt="")
+            img(src="img/rotate-2/9.png", alt="")
+            img(src="img/rotate-2/10.png", alt="")
+            img(src="img/rotate-2/11.png", alt="")
+            img(src="img/rotate-2/12.png", alt="")
+
         include includes/footer
